...
            onSecondaryButtonClicked()
        }
    }
}

object WelcomeScreenTestTags {
    const val WELCOME_PRIMARY_BUTTON = "welcome screen primary button"
    const val WELCOME_SECONDARY_BUTTON = "welcome screen secondary button"
}
